--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,11 +2,11 @@
 <html>
 <head>
   <title>The best Book App</title>
-  <link href="/public/styles/reset.css" type="text/css" rel="stylesheet">
-  <link href="/public/styles/base.css" type="text/css" rel="stylesheet">
-  <link href="/public/styles/layout.css" type="text/css" rel="stylesheet">
-  <link href="/public/styles/moduels.css" type="text/css" rel="stylesheet">
-  <link href="/public/styles/icons.css" type="text/css" rel="stylesheet">
+  <link href="/styles/reset.css" type="text/css" rel="stylesheet">
+  <link href="/styles/base.css" type="text/css" rel="stylesheet">
+  <link href="/styles/layout.css" type="text/css" rel="stylesheet">
+  <link href="/styles/moduels.css" type="text/css" rel="stylesheet">
+  <link href="/styles/icons.css" type="text/css" rel="stylesheet">
 </head>
 <body>
   <h1>Hello World</h1>
