--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,19 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-  <title>The best Book App</title>
+  <title>The Book Collection</title>
   <link href="/styles/reset.css" type="text/css" rel="stylesheet">
   <link href="/styles/base.css" type="text/css" rel="stylesheet">
   <link href="/styles/layout.css" type="text/css" rel="stylesheet">
   <link href="/styles/moduels.css" type="text/css" rel="stylesheet">
   <link href="/styles/icons.css" type="text/css" rel="stylesheet">
 </head>
+
 <body>
-  <h1>Hello World</h1>
-  <h2>this is proof of life</h2>  
-  <h3>DJ and Rosalyn were here</h3>
+
+  <main>
+
+    <h4>Search for books</h4>
+
+    <form action='/searches' method='post'>
+      <input type="text" name="search" placeholder="Enter a title or author">
+
+      <fieldset>
+        <label for="title">
+          <span>Title</span>
+          <input type="radio" name="search" value="title" required>
+        </label>
+      </fieldset>
+
+      <fieldset>
+        <label for="author">
+          <span>Author</span>
+          <input type="radio" name="search" value="author" required>
+        </label>
+      </fieldset>
+
+      <button type="submit" Search the Google Books API></button>
+
+  </main>
+
 </body>
+
 <footer>
 
 </footer>
+
 </html>
