--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,6 +8,8 @@
   <link href="/styles/layout.css" type="text/css" rel="stylesheet">
   <link href="/styles/moduels.css" type="text/css" rel="stylesheet">
   <link href="/styles/icons.css" type="text/css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 
 <body>
