started the constructer functions

--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -1,6 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
   <title>The Book Collection</title>
   <link href="/styles/reset.css" type="text/css" rel="stylesheet">
@@ -16,7 +13,26 @@
 
   <main>
 
-   
+    <h4>Search for books</h4>
+
+    <form action='/searches' method='post'>
+      <input type="text" name="search" placeholder="Enter a title or author">
+
+      <fieldset>
+        <label for="title">
+          <span>Title</span>
+          <input type="radio" name="search" value="title" required>
+        </label>
+      </fieldset>
+
+      <fieldset>
+        <label for="author">
+          <span>Author</span>
+          <input type="radio" name="search" value="author" required>
+        </label>
+      </fieldset>
+
+      <button type="submit" Search the Google Books API></button>
 
   </main>
 
