got books form page to render as well as the search results

--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -1,8 +1,9 @@
 <header>
   <nav>
     <ul>
-      <li><a href="/add">Add a New Task</a></li>
+      <li><a href="/searches">Searches</a></li>
       <li><a href="/">Home</a></li>
+      <li><a href="/searches/form">Book form</a></li>
     </ul>
   </nav>
 </header>
