--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,7 +7,17 @@
 <body>
 <%- include('../layout/header') %>
 
-<% books.forEach()
+<% books.forEach(booksToRead => { %>
+  <section>
+    <img src= "<%= booksToRead.book_image %>"
+    <p>Title: <%= booksToRead.title %></p>  
+    <p>Authour: <%= booksToRead.author %></p>
+    <p>Desription: <%= booksToRead.description %></p>
+    <p>ISBN: <%= booksToRead.isb %> </p>
+    <p>Book Shelf <%= booksToRead.bookshelf %></p>
+
+  </section>
+  <% }) %>
 
 </body>
 
