--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -1,17 +1,12 @@
-<head>
-  <title>The Book Collection</title>
-  <link href="/styles/reset.css" type="text/css" rel="stylesheet">
-  <link href="/styles/base.css" type="text/css" rel="stylesheet">
-  <link href="/styles/layout.css" type="text/css" rel="stylesheet">
-  <link href="/styles/moduels.css" type="text/css" rel="stylesheet">
-  <link href="/styles/icons.css" type="text/css" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <meta http-equiv="X-UA-Compatible" content="ie=edge">
-</head>
+<!DOCTYPE html>
+<html lang="en">
+    <%- include('../../layout/head') %>
+
 
 <body>
 
   <main>
+      <%- include('../../layout/header') %>
 
     <h4>Search for books</h4>
 
