--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -1,17 +1,15 @@
 *{
-  background-image: url(photos/canva-bookshelves.jpg);
-  background-size: cover;
-  height: 100%;
-  background-repeat: no-repeat, repeat;
   color: wheat;
   text-align: center;
 }
 body{
-  height: 300px;
+  background-image: url(photos/canva-bookshelves.jpg);
+  background-size: cover;
+  /* background-repeat: no-repeat, repeat; */
+  font-size: 8vw;
 }
 input{
-  background-image: none;
-  background-color: #8b6c5b;
+  /* background-color: #8b6c5b; */
   height: 20%;
   margin:auto;
 }
