--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -27,7 +27,7 @@
         </label>
       </fieldset>
 
-      <button type="submit" Search the Google Books API></button>
+      <button type="submit" Search the Google Books API>Check</button>
 
   </main>
 
