--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,7 +9,7 @@
 
 <% books.forEach(booksToRead => { %>
   <section>
-    <img src= "<%= booksToRead.book_image %>"
+    <img src= "<%= booksToRead.book_image %>"/>
     <p>Title: <%= booksToRead.title %></p>  
     <p>Authour: <%= booksToRead.author %></p>
     <p>Desription: <%= booksToRead.description %></p>
