--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -33,3 +33,37 @@
     margin:0;
   }
 }
+#searchResultsForm{
+  background-color:rgba(146, 105, 82, .6);
+  width:60%;
+  margin:auto;
+  margin-bottom: 5%;
+  padding:5%;
+}
+#searchResultsForm > form > fieldset{
+  display:flex;
+  flex-direction: column;
+  
+}
+#searchResultsForm > form > fieldset > input, input{
+  width: 80%;
+  margin:auto;
+  color: #443A31;
+  padding: 2%;
+  margin-bottom: 1%;
+}
+#searchResultsForm > form > fieldset > button, button{
+  background-color: #443A31;
+  width: 50%;
+  margin:auto;
+  color: whitesmoke;
+  padding: 5%;
+}
+
+
+#showPage{
+  background-color: rgba(146, 105, 82, .6);
+  width:60%;
+  margin:auto;
+  padding:5%;
+}
